tests/snapshots/examples_fixtures/type_system__failing__04_compile_float_string_arg.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/04_compile_float_string_arg.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `scale`.

  examples/type_system/failing/04_compile_float_string_arg.flx:6:7
  |
1 | fn scale(x: Float, factor: Float) -> Float {
  | ------------------------------------------ `scale` expects `Float` as the 1st parameter
2 |     x * factor
3 | }
4 | 
5 | 
6 | scale("3.14", 2.0)
  |       ^^^^^^
  |       ------ this argument has type `String`

Note:
  expected argument type: Float
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Float` value as the 1st argument.
== stdout ==
<not executed>
